[package]
name = "y_tea"
version = "0.1.0"
edition = "2021"

[release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { version = "0.51.0", features = ["core", "bam", "bed", "bgzf", "fasta", "fastq", "gtf", "sam"] }
docopt = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bitintr = "0.3.0"
flate2 = "1.0.26"
rand = "0.8.5"
polars = { version = "0.33.0", features = ["lazy", "decompress"] }
indicatif = "0.17.3"
rayon = "1.7.0"
threadpool = "1.8.1"
sha2 = "0.10.6"
regex = "1.8.4"
num = "0.4.0"
